# Agentic-Store-Layout-Optimizer

./: .env.example  .gitignore  Claude.md  README.md  pyproject.toml  tasks.ps1
.claude/: launch.json
.githooks/: post-commit
api/: __init__.py  auth.py  main.py  schemas.py
api/routes/: audit.py  health.py  products.py  recommendations.py
data/: __init__.py  seed.py
docs/: Data_Product_Contract_Store_Layout_Optimizer_1.1.md  Enhancement_DeepDive_Store_Layout_Optimizer1.1.md  Product_Vision_OnePager_v2.1_Store_Layout_Optimizer.md  architecture.md  decision_log.md  demo_script.md  governance_charter.md  project_journal.md  sprint_1_backlog.md  sprint_1_test_review.md
platform_services/: __init__.py  config.py  data_access.py  exceptions.py
services/: __init__.py
services/affinity_optimization/: __init__.py  service.py
services/affinity_optimization/mba_core/: __init__.py  engine.py
services/governance/: __init__.py  audit_writer.py  explainability.py  policy_engine.py
tests/: conftest.py
tests/integration/: test_api.py  test_governance_in_path.py
tests/unit/: test_layer_boundaries.py
tests/unit/data/: test_seed.py
tests/unit/platform_services/: test_data_access.py
tests/unit/services/affinity_optimization/: test_mba_core.py  test_service_catalog.py
tests/unit/services/governance/: test_audit_writer.py  test_explainability.py  test_policy_engine.py
tests/unit/ui/: test_formatting.py
ui/: __init__.py  api_client.py  formatting.py  sample_transactions.csv  streamlit_app.py
ui/modes/: __init__.py  admin_governance.py  category_manager.py
